--- a/Example/MyFitnessPalSDK/MyFitnessPalSDK-Info.plist
+++ b/Example/MyFitnessPalSDK/MyFitnessPalSDK-Info.plist
@@ -20,10 +20,30 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>MyFitnessPal SDK Sample App</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>mfp-sampleapiclient</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>mfphd</string>
+		<string>mfp</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
